<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="121dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    tools:context="ch.epfl.sweng.partyup.PlayerFragment"
    tools:layout_editor_absoluteX="10dp"
    tools:layout_editor_absoluteY="360dp">


    <LinearLayout

        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_width="0dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <SeekBar
            android:id="@+id/track_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <LinearLayout

            android:id="@+id/playerLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:id="@+id/AlbumPreview"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:contentDescription="@string/album"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintTop_toTopOf="parent"

                app:srcCompat="@mipmap/empty_album"
                tools:ignore="NestedWeights" /><!--needed for a proper layout-->

            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".6"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/song_name_player"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"

                        android:textColor="@color/textColorMain"
                        android:textStyle="bold"
                        tools:ignore="NestedWeights" /><!--needed for a proper layout-->

                    <TextView
                        android:id="@+id/artist_name_player"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"


                        android:textColor="@color/textColorMain" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/playPauseLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".5"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:ignore="NestedWeights"><!--needed for a proper layout-->

                        <Button
                            android:id="@+id/playPause"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"

                            android:layout_marginEnd="8dp"

                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"


                            android:layout_weight=".5"
                            android:background="@mipmap/play_button150dpi"
                            android:onClick="playPause"
                            android:scaleType="centerInside"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="W,1:1"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </android.support.constraint.ConstraintLayout>

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5">

                        <Button
                            android:id="@+id/nextButton"
                            android:layout_width="0dp"


                            android:layout_height="0dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"


                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:background="@mipmap/next_button150dpi"
                            android:onClick="next"
                            android:scaleType="centerInside"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="W,1:1"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </android.support.constraint.ConstraintLayout>

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5">

                        <Button
                            android:id="@+id/SaveButon"
                            android:layout_width="0dp"


                            android:layout_height="0dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"


                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/ic_favorite_border_black_24dp"
                            android:backgroundTint="@color/colorPrimaryDark"
                            android:onClick="saveToLibrary"
                            android:scaleType="centerInside"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="W,1:1"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </android.support.constraint.ConstraintLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    </android.support.constraint.ConstraintLayout>

