...
            android:layout_height="match_parent"
            android:layout_weight="0.90"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/addSongButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/imageButton"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_add_circle_outline_24dp" />
...
