...
                android:background="@android:color/transparent"
                android:contentDescription="@string/imageButton"
                android:onClick="onClickBackButton"
                app:srcCompat="@drawable/ic_arrow_back_gray_24dp" />

            <EditText
                android:id="@+id/search_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:ems="10"
                android:hint="@string/searchHint"
                android:imeOptions="actionSearch"
...
            <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="12">

                <Button
                    android:id="@+id/playlistButton"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/ic_library_music_black_24dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:onClick="onPlaylistClick"
                    android:scaleType="centerInside"
...
