...
                android:background="@color/backgroundLight"
                android:contentDescription="@string/imageButton"
                android:onClick="onCameraButtonClick"
                app:srcCompat="@drawable/ic_photo_camera_gray_24dp" />

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".13"
                android:background="@color/backgroundLight"
                android:contentDescription="@string/imageButton"
                android:onClick="onSearchButtonClick"
                app:srcCompat="@drawable/ic_search_gray_24dp" />

            <ImageButton
                android:id="@+id/settingButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".09"
                android:background="@color/backgroundLight"
                android:contentDescription="@string/imageButton"
                android:onClick="showPopup"
...
