<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/headPlaylistFragment"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/imageButton"
            android:onClick="onClickBackButton"
            app:srcCompat="@drawable/ic_arrow_back_gray_24dp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerPlaylist"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>